<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lyf.com.example.itravel.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_main"
        android:layout_height="45dip"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/home_page"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_gravity="right"
            android:layout_marginRight="50dip"/>

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tb_main"
        android:background="#EBEBEB">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:background="#f3f3f3"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_home_page"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#00000000"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/ib_home_page"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_marginTop="6dip"
                android:src="@drawable/home_page_nomal"
                android:clickable="false"
                android:background="#00000000" />

            <TextView
                android:id="@+id/tv_home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip"
                android:text="@string/home_page"
                android:textColor="@color/gray"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/ib_share"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_marginTop="6dip"
                android:src="@drawable/share_nomal"
                android:clickable="false"
                android:background="#00000000" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_marginTop="2dip"
                android:textColor="@color/gray"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_person"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#00000000"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/ib_person"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_marginTop="6dip"
                android:src="@drawable/person_nomal"
                android:clickable="false"
                android:background="#00000000" />

            <TextView
                android:id="@+id/tv_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person"
                android:layout_marginTop="2dip"
                android:textColor="@color/gray"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.001dip"
        android:layout_alignTop="@id/ll_main"
        android:background="#CCCCCC"/>

</RelativeLayout>
